tests/neg/labelNotFound.scala
// scalac: -explain

object Test:
  scala.util.boundary.break(1) // error
